# UniUDP

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: performance.rs
docs/: perf.md  protocol.md  security.md
examples/: auth_key_rotation.rs  basic_send_receive.rs  fec_recovery.rs  multi_sender.rs  tokio_send_receive.rs
src/: checksum.rs  error.rs  fec.rs  header_validation.rs  lib.rs  packet.rs  types.rs
src/receiver/: loop_logic.rs  message_state.rs  mod.rs  session.rs  socket.rs
src/receiver/state/: completed_cache.rs  index.rs  mod.rs  pending_store.rs  session_replay.rs
src/sender/: builder.rs  emit.rs  mod.rs  plan.rs  request.rs  send_paths.rs  tests.rs  tracking.rs
src/types/message/: completion.rs  identity.rs  mod.rs  policy.rs  report.rs
src/types/runtime/: config.rs  constants.rs  mod.rs
src/types/runtime/options/: diagnostics.rs  mod.rs  receive.rs  send_identity.rs  send_transport.rs
src/types/transport/: auth.rs  mod.rs  packet.rs
tests/: protocol.rs  stress_property.rs  tokio_async.rs
tests/protocol/: auth.rs  common.rs  core.rs  fec.rs  parser.rs  pending.rs  replay.rs  source_policy.rs  timeouts.rs
