[package]
name = "uniudp"
version = "1.0.0"
edition = "2021"
description = "Unidirectional UDP transport with chunking, redundancy, and Reed-Solomon FEC."
license = "MIT"
repository = "https://github.com/stephenberry/UniUDP"
homepage = "https://github.com/stephenberry/UniUDP"
documentation = "https://docs.rs/uniudp"
readme = "README.md"
keywords = ["udp", "networking", "transport", "fec", "reliability"]
categories = ["network-programming"]
rust-version = "1.74"

[lib]
name = "uniudp"
path = "src/lib.rs"

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
crc32c = "0.6.8"
hmac = "0.12"
mio = { version = "~1.1.1", features = ["os-poll", "os-ext"] }
rand = "0.9"
reed-solomon-erasure = "6"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["net", "time", "rt", "macros"], optional = true }
zeroize = "1"

[dev-dependencies]
criterion = "0.5.1"
reed-solomon-erasure = "6"

[[bench]]
name = "performance"
harness = false
